--- a/public/expenses.css
+++ b/public/expenses.css
@@ -99,3 +99,14 @@ input::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0;
 }
+
+::-webkit-scrollbar {
+    width: 1rem;
+    height: 1rem;
+    background-color: rgb(44, 44, 44);
+}
+
+::-webkit-scrollbar-thumb {
+    width: 1rem;
+    background-color: rgb(82, 214, 150, 0.5);
+}
