--- a/public/expenses.css
+++ b/public/expenses.css
@@ -4,19 +4,39 @@
     bottom: 0;
 }
 
-#expense-page-main h1 {
+.premium-container {
     flex: 1;
+    width: 100%;
+    padding: 1rem 2rem;
     display: flex;
+    justify-content: space-between;
     align-items: center;
+    border-bottom: 1px solid rgb(82, 214, 150);
+}
+
+#premium-user {
+    padding-left: 1rem;
+    font-size: 1rem;
+}
+
+#buy-premium-btn {
+    background-color: rgb(82, 214, 150);
+    font-size: 1.25rem;
+    padding: 1rem;
+    border: none;
+}
+
+#buy-premium-btn:hover {
+    cursor: pointer;
 }
 
 .form-container {
-    flex: 1;
-    justify-content: flex-start;
+    flex: 2;
+    justify-content: center;
 }
 
 #expense-list {
-    flex: 5;
+    flex: 7;
     background-color: rgb(44, 44, 44);
     list-style-type: none;
     margin: 0;
