--- a/public/expenses.css
+++ b/public/expenses.css
@@ -19,15 +19,93 @@
     font-size: 1rem;
 }
 
-#buy-premium-btn {
+#buy-premium-btn,
+#leaderboard-btn {
     background-color: rgb(82, 214, 150);
     font-size: 1.25rem;
     padding: 1rem;
     border: none;
 }
 
-#buy-premium-btn:hover {
+#leaderboard-close-btn {
+    color: rgb(82, 214, 150);
+    background-color: transparent;
+    border: none;
+    padding-right: 1rem;
+    font-size: x-large;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+#buy-premium-btn:hover,
+#leaderboard-btn:hover,
+#leaderboard-close-btn:hover {
     cursor: pointer;
+}
+
+#leaderboard-container {
+    background-color: rgb(35, 35, 35);
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: none;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+#leaderboard-container div {
+    width: 100%;
+    margin: 1rem;
+    padding: 1rem 2rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#leaderboard-container div h1 {
+    font-size: 2rem;
+    padding-top: 1rem;
+}
+
+#leaderboard-list {
+    background-color: rgb(44, 44, 44);
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    list-style: none;
+    padding: 0;
+    overflow-y: scroll;
+}
+
+.list-item {
+    background-color: rgb(35, 35, 35);
+    width: 97%;
+    font-size: 1.5rem;
+    margin: 1rem 0 1rem 1rem;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.list-item-name {
+    margin: 0;
+    flex: 5;
+}
+
+.list-item-expense {
+    margin: 0;
+    flex: 1;
+}
+
+.list-item span {
+    color: rgb(82, 214, 150);
 }
 
 .form-container {
