--- a/public/index.css
+++ b/public/index.css
@@ -20,7 +20,8 @@
 }
 
 #buy-premium-btn,
-#leaderboard-btn {
+#leaderboard-btn,
+#download-btn {
     background-color: rgb(82, 214, 150);
     font-size: 1.25rem;
     padding: 1rem;
@@ -38,9 +39,14 @@
     align-items: flex-start;
 }
 
+#download-container{
+    padding: 2rem;
+}
+
 #buy-premium-btn:hover,
 #leaderboard-btn:hover,
-#leaderboard-close-btn:hover {
+#leaderboard-close-btn:hover,
+#download-btn {
     cursor: pointer;
 }
 
