--- a/public/index.css
+++ b/public/index.css
@@ -28,18 +28,20 @@
 
 #buy-premium-btn,
 #leaderboard-btn,
-#download-btn {
+#download-btn,
+#download-history-btn {
     background-color: rgb(82, 214, 150);
     font-size: 1.25rem;
     padding: 1rem;
     border: none;
 }
 
-#leaderboard-btn{
+#leaderboard-btn {
     display: none;
 }
 
-#leaderboard-close-btn {
+#leaderboard-close-btn,
+#download-history-close-btn {
     color: rgb(82, 214, 150);
     background-color: transparent;
     border: none;
@@ -50,21 +52,25 @@
     align-items: flex-start;
 }
 
-#download-container{
-    padding: 2rem;
+#download-container {
+    width: 100%;
+    padding: 2rem 3rem;
     display: none;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
 }
 
 #buy-premium-btn:hover,
 #leaderboard-btn:hover,
 #leaderboard-close-btn:hover,
-#download-btn {
+#download-history-close-btn:hover,
+#download-btn:hover,
+#download-history-btn:hover {
     cursor: pointer;
 }
 
-#leaderboard-container {
+#leaderboard-container,
+#download-history-container {
     background-color: rgb(35, 35, 35);
     position: fixed;
     top: 0;
@@ -77,7 +83,8 @@
     align-items: center;
 }
 
-#leaderboard-container div {
+#leaderboard-container div,
+#download-history-container div {
     width: 100%;
     margin: 1rem;
     padding: 1rem 2rem;
@@ -86,12 +93,14 @@
     align-items: center;
 }
 
-#leaderboard-container div h1 {
+#leaderboard-container div h1,
+#download-history-container div h1 {
     font-size: 2rem;
     padding-top: 1rem;
 }
 
-#leaderboard-list {
+#leaderboard-list,
+#download-history-list {
     background-color: rgb(44, 44, 44);
     width: 100%;
     display: flex;
@@ -103,15 +112,26 @@
     overflow-y: scroll;
 }
 
+#download-history-list {
+    align-items: stretch;
+    padding: 1rem 0;
+}
+
+.file,
 .list-item {
     background-color: rgb(35, 35, 35);
-    width: 50%;
-    font-size: 1.5rem;
+    font-size: 1.25rem;
     margin: 1rem 0 1rem 1rem;
     padding: 1rem;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
+}
+
+.list-item {
+    width: 50%;
+    font-size: 1.5rem;
+    justify-content: space-between;
 }
 
 .list-item-name {
@@ -218,7 +238,8 @@
     height: 4rem;
 }
 
-#add-expense-btn:hover, #add-expense-btn:focus {
+#add-expense-btn:hover,
+#add-expense-btn:focus {
     cursor: pointer;
     background-color: rgb(82, 214, 150, 0.5);
     outline: none;
