--- a/public/index.css
+++ b/public/index.css
@@ -11,7 +11,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-bottom: 1px solid rgb(82, 214, 150);
 }
 
 .premium-container h1 {
@@ -158,7 +157,7 @@
     background-color: rgb(44, 44, 44);
     list-style-type: none;
     margin: 0;
-    padding: 1rem 2rem;
+    padding: 0.5rem 2rem;
     width: 100%;
     font-size: 1.25rem;
     display: flex;
@@ -166,11 +165,13 @@
     align-items: stretch;
     justify-content: flex-start;
     overflow-y: scroll;
+    border-top: 0.1rem solid rgb(82, 214, 150);
+    border-bottom: 0.1rem solid rgb(82, 214, 150);
 }
 
 .expense-item {
     padding: 1rem;
-    margin: 1rem 0 1rem 1rem;
+    margin: 0.5rem 0 0.5rem 1rem;
     border: none;
     background-color: rgb(35, 35, 35);
     display: flex;
@@ -229,10 +230,9 @@
 
 #add-expense-btn {
     flex: 1;
-    border: 0.2rem solid white;
-    font-weight: bold;
+    border: none;
     color: white;
-    background-color: rgb(35, 35, 35);
+    background-color: rgb(44, 44, 44);
     padding: 1rem;
     margin: 0 1rem;
     height: 4rem;
@@ -243,6 +243,42 @@
     cursor: pointer;
     background-color: rgb(82, 214, 150, 0.5);
     outline: none;
+}
+
+#pagination-container {
+    background-color: rgb(35, 35, 35);
+    width: 100%;
+    padding-top: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#pagination-container p {
+    letter-spacing: 0.5rem;
+    font-size: 1.25rem;
+    margin: 0;
+}
+
+.pagination-btn {
+    background-color: rgb(44, 44, 44);
+    color: white;
+    font-size: 1.25rem;
+    margin: 0 1rem;
+    padding: 0.5rem 1rem;
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.pagination-btn:hover {
+    background-color: rgb(82, 214, 150, 0.5);
+    cursor: pointer;
+}
+
+.active {
+    background-color: rgb(82, 214, 150, 0.5);
 }
 
 input::-webkit-outer-spin-button,
